Vcomplete NEWS -- history of user-visible changes. -*- mode: outline -*-
See the end of the file for an explanation of the versioning scheme.

* 1.2 (in development)

** Improve Embark integration.
Fix Embark 'non-edit commands' not immediately exiting when
'vcomplete-auto-update' is t.
Add (auto loaded) 'vcomplete-embark-mode' which enables Embark
integration.
It is no longer required to explicitly load 'vcomplete-embark.el' to
enable this integration.

** Add 'vcomplete-search-range'.
This custom variable is used to control in which frames the completion
list buffer is searched for during completion.

* 1.1

** Add the 'vcomplete-highlight' face.
This face is used to highlight completions. By default, it is the same
as the built-in 'highlight' face.

** Add 'vcomplete-no-update-commands'.
This custom variable is used to control which commands shouldn't cause
the completions list buffer to update.

** Embark support has been moved to a separate file.
It must be loaded explicitly (using '(require 'vcomplete-embark)' or
similar).

* 1.0

** Make auto updating the completion list buffer more responsive.

** Support commands which use 'completion-in-region' in the minibuffer.

** Add basic Embark support.

** Highlight the completion at point in the completion list buffer
even when using normal navigation commands.

** Remove 'vcomplete-kill-buffer'.
This was done as part of an effort to simplify the code base (since
third party solutions to completion actions exist).

** Optionally automatically update the completion list buffer.
See 'vcomplete-auto-update's documentation string for more information.

* 0.1

** Initial version.

* Versioning scheme
Vcomplete's versioning scheme is inspired by semver (https://semver.org/).
Each version number is of the form MAJOR.MINOR.PATCH (patch may be
omitted if 0).
The MAJOR version is bumped when a user facing variable or function
changes in a way that could cause previous user configuration to